--- a/web_01/unionProgram.html
+++ b/web_01/unionProgram.html
@@ -9,7 +9,8 @@
     <style>
         .biaoti {
             font-size: 30px;
-            background-color: #f5f5f5;
+            background-color: #f3f3f3;
+            opacity: 0.7;
             text-align: center;
             font-family: "Microsoft Yahei";
             margin-top: 10px;
@@ -22,24 +23,97 @@
         }
 
         .mainbody {
-            height: 200px;
-            background-color: #f5f5f5;
-
+            height: 150px;
+            background-color: #f3f3f3;
+            opacity: 0.7;
+            margin: 10px auto;
+            width: 964px;
+            padding-left: 460px;
+            padding-top: 50px;
         }
 
         img {
             position: absolute;
-            height: 70px;
+            height: 40px;
+        }
+
+        .back {
+            width: 900px;
+            height: 500px;
+            border: #333333 1px solid;
+            margin: 0 auto;
+
+        }
+
+        div .in {
+            margin: 0 auto;
+            width: 400px;
+            height: 25px;
+        }
+
+        .mainbody.inner {
+            margin: 50px auto;
+            width: 600px;
+            height: 200px;
+            border: #333333 1px solid;
+            /* display: inline-block; */
+        }
+
+        .head {
+            height: 100px;
+            width: 100px;
+            border-radius: 50px;
+            float: right;
+        }
+
+        h1 {
+            float: left;
+        }
+
+        .clearfix:after {
+            content: "";
+            display: block;
+            height: 0;
+            clear: both;
+            visibility: hidden;
+        }
+
+        .clearfix {
+            *zoom: 1;
+        }
+
+        body {
+            background-image: url(background.png);
+        }
+
+        .confirm,
+        .output {
+            width: 50px;
+            height: 30px;
         }
     </style>
-    <link rel="stylesheet" href="css/font.css">
+
 </head>
 
 <body>
     <div class="biaoti">
-        <h3>人民币数字大写在线转换工具</h3>
+        <h3>人民币数字大小写在线转换工具</h3>
+        <!-- <div><button type="submit" class="head">头像</button></div> -->
     </div>
     <div class="mainbody">
+        <!-- 
+        <span class="clearfix"></span> -->
+        <div class="inner">
+            输入：
+            <input class="in" type="text" placeholder="请输入" model="text" maxlength="10" show-word-limit>
+            <button type="submit" class="confirm">确认</button>
+            </input>
+            <div style="margin: 20px 0;"></div>
+            输出：
+            <input class="in" type="textarea" placeholder="转换结果" v-model="textarea" maxlength="30" show-word-limit>
+            <button type="submit" class="output">复制</button>
+            </input>
+        </div>
 
     </div>
     <img src="money.png">
@@ -47,9 +121,19 @@
         var pic = document.querySelector('img');
         document.addEventListener('mousemove', function (e) {
             // console.log('woce');
-            pic.style.left = e.pageX - 35 + 'px';
-            pic.style.top = e.pageY - 35 + 'px';
+            // pic.style.left = e.pageX - 35 + 'px';
+            // pic.style.top = e.pageY - 35 + 'px';
+            pic.style.left = e.pageX + 5 + 'px';
+            pic.style.top = e.pageY + 5 + 'px';
         })
+        // export default {
+        //     data() {
+        //         return {
+        //             text: '',
+        //             textarea: ''
+        //         }
+        //     }
+        // }
     </script>
 </body>
 
